--- a/src/main/resources/ga/gaven/ui/ApplicationUI.fxml
+++ b/src/main/resources/ga/gaven/ui/ApplicationUI.fxml
@@ -8,6 +8,8 @@
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.SeparatorMenuItem?>
 <?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -90,9 +92,45 @@
                   <Label text="Data Input" />
                   <TextArea fx:id="txtDataInput" prefHeight="200.0" prefWidth="200.0" wrapText="true" />
                   <Label text="ASCII" />
-                  <TextArea fx:id="txtASCII" editable="false" prefHeight="200.0" prefWidth="200.0" text="[]" wrapText="true" />
+                  <TabPane prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE">
+                    <tabs>
+                      <Tab text="Binary">
+                           <content>
+                              <TextArea fx:id="txtASCII" editable="false" prefHeight="200.0" prefWidth="200.0" text="[]" wrapText="true" />
+                           </content>
+                      </Tab>
+                      <Tab text="Hexadecimal">
+                           <content>
+                              <TextArea fx:id="txtASCIIHex" editable="false" prefHeight="200.0" prefWidth="200.0" text="[]" wrapText="true" />
+                           </content>
+                      </Tab>
+                        <Tab text="Octal">
+                           <content>
+                              <TextArea fx:id="txtASCIIOctal" editable="false" prefHeight="200.0" prefWidth="200.0" text="[]" wrapText="true" />
+                           </content>
+                        </Tab>
+                    </tabs>
+                  </TabPane>
                   <Label text="EBCDIC" />
-                  <TextArea fx:id="txtEBCDIC" editable="false" prefHeight="200.0" prefWidth="200.0" text="[]" wrapText="true" />
+                  <TabPane prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE">
+                    <tabs>
+                      <Tab text="Binary">
+                           <content>
+                              <TextArea fx:id="txtEBCDIC" editable="false" prefHeight="200.0" prefWidth="200.0" text="[]" wrapText="true" />
+                           </content>
+                      </Tab>
+                      <Tab text="Hexadecimal">
+                           <content>
+                              <TextArea fx:id="txtEBCDICHex" editable="false" prefHeight="200.0" prefWidth="200.0" text="[]" wrapText="true" />
+                           </content>
+                      </Tab>
+                        <Tab text="Octal">
+                           <content>
+                              <TextArea fx:id="txtEBCDICOctal" editable="false" prefHeight="200.0" prefWidth="200.0" text="[]" wrapText="true" />
+                           </content>
+                        </Tab>
+                    </tabs>
+                  </TabPane>
                </children>
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
