--- a/src/main/resources/ga/gaven/ui/ApplicationUI.fxml
+++ b/src/main/resources/ga/gaven/ui/ApplicationUI.fxml
@@ -6,6 +6,7 @@
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.ScrollBar?>
 <?import javafx.scene.control.SeparatorMenuItem?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.Tab?>
@@ -137,7 +138,11 @@
                </padding></VBox>
             <VBox prefHeight="200.0" prefWidth="100.0">
                <children>
-                  <HBox fx:id="panelEncode" prefHeight="462.0" prefWidth="626.0" VBox.vgrow="ALWAYS" />
+                  <HBox fx:id="panelEncode" prefHeight="462.0" prefWidth="626.0" VBox.vgrow="ALWAYS">
+                     <padding>
+                        <Insets bottom="20.0" />
+                     </padding></HBox>
+                  <ScrollBar fx:id="scrollLineChart" unitIncrement="10.0" visibleAmount="100.0" />
                   <GridPane maxHeight="80.0" minHeight="80.0" prefHeight="80.0" VBox.vgrow="ALWAYS">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" maxWidth="316.0" minWidth="10.0" prefWidth="211.0" />
